Drop Guava in favor of plain Java API