@@ -9,8 +9,6 @@ import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import com.saucelabs.saucerest.DataCenter;
 import com.saucelabs.saucerest.JobVisibility;
 import com.saucelabs.saucerest.SauceREST;
@@ -296,7 +294,7 @@ public class JobsEndpointTest {
   @EnumSource(DataCenter.class)
   public void addTags(DataCenter param, TestInfo testInfo) throws IOException {
     runTest(param, testInfo);
-    List<String> tags = ImmutableList.of("tag1", "tag2", "tag3");
+    List<String> tags = List.of("tag1", "tag2", "tag3");
 
     Job job = jobs.get().addTags(sessionID.get(), tags);
 
@@ -307,8 +305,7 @@ public class JobsEndpointTest {
   @EnumSource(DataCenter.class)
   public void addCustomData(DataCenter param, TestInfo testInfo) throws IOException {
     runTest(param, testInfo);
-    Map<String, String> customData =
-        ImmutableMap.of("key1", "value1", "key2", "value2", "key3", "value3");
+      Map<String, String> customData = Map.of("key1", "value1", "key2", "value2", "key3", "value3");
 
     Job job = jobs.get().addCustomData(sessionID.get(), customData);
 
